--- a/IdeaSlotApp/UI/Storyboard/Category/CategoryRegisterFormView.xib
+++ b/IdeaSlotApp/UI/Storyboard/Category/CategoryRegisterFormView.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="CategoryRegistForm" id="iN0-l3-epB" customClass="CategoryRegistFormView" customModule="IdeaSlotApp" customModuleProvider="target">
+        <view contentMode="scaleToFill" restorationIdentifier="CategoryRegisterFrom" id="iN0-l3-epB" customClass="CategoryRegisterFormView" customModule="IdeaSlotApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -46,14 +46,14 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2IP-ef-nDl">
-                            <rect key="frame" x="113" y="150" width="175" height="30"/>
+                            <rect key="frame" x="112.5" y="150" width="175" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="SeR-5j-VGO"/>
                                 <constraint firstAttribute="width" constant="175" id="XJ5-J7-HN2"/>
                             </constraints>
                             <state key="normal" title="Button"/>
                             <connections>
-                                <action selector="RegistAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="I8x-l5-Xs0"/>
+                                <action selector="RegisterAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="5Yy-sm-lmQ"/>
                             </connections>
                         </button>
                     </subviews>
@@ -79,10 +79,10 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="closeButton" destination="rVp-9q-eXd" id="8tQ-u1-xaS"/>
-                <outlet property="containerView" destination="d06-mZ-fO6" id="Qud-lr-6eP"/>
-                <outlet property="registButton" destination="2IP-ef-nDl" id="wzh-DR-OLx"/>
-                <outlet property="textFrom" destination="b3Y-xB-bIs" id="G9f-61-Qdw"/>
+                <outlet property="closeButton" destination="rVp-9q-eXd" id="8Xs-Jj-QXk"/>
+                <outlet property="containerView" destination="d06-mZ-fO6" id="piS-eG-2ik"/>
+                <outlet property="registerButton" destination="2IP-ef-nDl" id="hKa-bS-4DQ"/>
+                <outlet property="textForm" destination="b3Y-xB-bIs" id="Z1l-GC-KGb"/>
             </connections>
             <point key="canvasLocation" x="201.59999999999999" y="-83.658170914542737"/>
         </view>
