--- a/IdeaSlotApp/UI/Storyboard/Idea/IdeaRegisterFormView.xib
+++ b/IdeaSlotApp/UI/Storyboard/Idea/IdeaRegisterFormView.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="IdeaRegistForm" id="iN0-l3-epB" customClass="IdeaRegistFormView" customModule="IdeaSlotApp" customModuleProvider="target">
+        <view contentMode="scaleToFill" restorationIdentifier="IdeaRegisterForm" id="iN0-l3-epB" customClass="IdeaRegisterFormView" customModule="IdeaSlotApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="400" height="400"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
