--- a/IdeaSlotApp/UI/Storyboard/Idea/IdeaRegisterFormView.xib
+++ b/IdeaSlotApp/UI/Storyboard/Idea/IdeaRegisterFormView.xib
@@ -13,16 +13,16 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="IdeaRegisterForm" id="iN0-l3-epB" customClass="IdeaRegisterFormView" customModule="IdeaSlotApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="400"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="300"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cBU-ww-XuG">
-                    <rect key="frame" x="0.0" y="0.0" width="400" height="400"/>
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="300"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4DT-Pb-V35">
                             <rect key="frame" x="8" y="8" width="56" height="24"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="56" id="Pkb-k0-MHx"/>
+                                <constraint firstAttribute="width" constant="56" id="Mgg-7M-SDm"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                             <nil key="textColor"/>
@@ -37,19 +37,12 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="byj-sI-dzA">
                             <rect key="frame" x="362" y="8" width="30" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="30" id="guu-f3-eeU"/>
+                                <constraint firstAttribute="width" constant="30" id="1IZ-9Q-fyN"/>
                             </constraints>
                             <connections>
                                 <action selector="saveButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="wR2-IB-ubC"/>
                             </connections>
                         </button>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ddX-Hq-CyT">
-                            <rect key="frame" x="0.0" y="77" width="400" height="323"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                        </textView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="word1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FIq-Js-9Dp">
                             <rect key="frame" x="15" y="48" width="150" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -65,44 +58,66 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="operator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u5W-fK-zfU">
                             <rect key="frame" x="167" y="48" width="66" height="21"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="66" id="lqA-LV-euO"/>
+                                <constraint firstAttribute="width" constant="66" id="Upv-2s-p2E"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U2P-oM-t9I">
+                            <rect key="frame" x="8" y="77" width="100" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="100" id="cs1-dY-SJJ"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="showDropdown:" destination="iN0-l3-epB" eventType="touchUpInside" id="aUQ-Gm-PNT"/>
+                            </connections>
+                        </button>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ddX-Hq-CyT">
+                            <rect key="frame" x="8" y="115" width="384" height="177"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="177" id="5Mb-Am-WVC"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        </textView>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="u5W-fK-zfU" firstAttribute="baseline" secondItem="VEN-JR-LfJ" secondAttribute="baseline" id="195-Cq-Awo"/>
-                        <constraint firstItem="4DT-Pb-V35" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leadingMargin" id="7N9-Dp-znT"/>
-                        <constraint firstItem="u5W-fK-zfU" firstAttribute="centerX" secondItem="ddX-Hq-CyT" secondAttribute="centerX" id="7dd-9t-bHs"/>
-                        <constraint firstAttribute="width" secondItem="cBU-ww-XuG" secondAttribute="height" multiplier="1:1" id="AZz-Pa-Swn"/>
-                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="baseline" secondItem="u5W-fK-zfU" secondAttribute="baseline" id="CRn-QI-uId"/>
-                        <constraint firstItem="4DT-Pb-V35" firstAttribute="top" secondItem="erp-lg-mES" secondAttribute="top" id="Fc5-RK-rHO"/>
-                        <constraint firstItem="byj-sI-dzA" firstAttribute="trailing" secondItem="cBU-ww-XuG" secondAttribute="trailingMargin" id="H0s-OT-t7s"/>
-                        <constraint firstItem="VEN-JR-LfJ" firstAttribute="leading" secondItem="u5W-fK-zfU" secondAttribute="trailing" constant="9" id="PtB-Lq-vBr"/>
-                        <constraint firstItem="ddX-Hq-CyT" firstAttribute="top" secondItem="FIq-Js-9Dp" secondAttribute="bottom" constant="8" symbolic="YES" id="QCl-oN-oAI"/>
-                        <constraint firstItem="byj-sI-dzA" firstAttribute="leading" secondItem="erp-lg-mES" secondAttribute="trailing" constant="12" id="S6a-Mr-KaL"/>
-                        <constraint firstItem="u5W-fK-zfU" firstAttribute="leading" secondItem="FIq-Js-9Dp" secondAttribute="trailing" constant="2" id="acK-s9-ueb"/>
-                        <constraint firstItem="erp-lg-mES" firstAttribute="top" secondItem="byj-sI-dzA" secondAttribute="top" id="fBH-ad-bMt"/>
-                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leading" constant="15" id="gca-pO-y3X"/>
-                        <constraint firstAttribute="bottom" secondItem="ddX-Hq-CyT" secondAttribute="bottom" id="kO8-iy-6Im"/>
-                        <constraint firstItem="erp-lg-mES" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leading" constant="61" id="kb6-Eg-lYJ"/>
-                        <constraint firstItem="ddX-Hq-CyT" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leading" id="mdy-F2-ZE8"/>
-                        <constraint firstItem="byj-sI-dzA" firstAttribute="trailing" secondItem="VEN-JR-LfJ" secondAttribute="trailing" id="nOu-FU-Vz3"/>
-                        <constraint firstAttribute="trailing" secondItem="ddX-Hq-CyT" secondAttribute="trailing" id="pEy-9b-jgM"/>
-                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="top" secondItem="erp-lg-mES" secondAttribute="bottom" constant="10" id="pzd-8N-piR"/>
-                        <constraint firstItem="erp-lg-mES" firstAttribute="bottom" secondItem="byj-sI-dzA" secondAttribute="bottom" id="qF3-iV-3S6"/>
-                        <constraint firstItem="4DT-Pb-V35" firstAttribute="top" secondItem="cBU-ww-XuG" secondAttribute="topMargin" id="udH-cp-Poh"/>
+                        <constraint firstItem="4DT-Pb-V35" firstAttribute="top" secondItem="erp-lg-mES" secondAttribute="top" id="3W2-sk-wAn"/>
+                        <constraint firstItem="4DT-Pb-V35" firstAttribute="top" secondItem="cBU-ww-XuG" secondAttribute="topMargin" id="3zO-k5-hNg"/>
+                        <constraint firstItem="byj-sI-dzA" firstAttribute="trailing" secondItem="cBU-ww-XuG" secondAttribute="trailingMargin" id="6b4-1z-3Mc"/>
+                        <constraint firstItem="u5W-fK-zfU" firstAttribute="baseline" secondItem="VEN-JR-LfJ" secondAttribute="baseline" id="86L-yj-R9t"/>
+                        <constraint firstItem="U2P-oM-t9I" firstAttribute="leading" secondItem="ddX-Hq-CyT" secondAttribute="leading" id="AUD-cJ-7Jm"/>
+                        <constraint firstItem="4DT-Pb-V35" firstAttribute="leading" secondItem="U2P-oM-t9I" secondAttribute="leading" id="CDn-mT-myk"/>
+                        <constraint firstItem="4DT-Pb-V35" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leadingMargin" id="CyX-kB-zag"/>
+                        <constraint firstItem="erp-lg-mES" firstAttribute="top" secondItem="byj-sI-dzA" secondAttribute="top" id="Dxg-Du-gHI"/>
+                        <constraint firstItem="VEN-JR-LfJ" firstAttribute="trailing" secondItem="ddX-Hq-CyT" secondAttribute="trailing" id="KOS-pX-tPp"/>
+                        <constraint firstItem="byj-sI-dzA" firstAttribute="leading" secondItem="erp-lg-mES" secondAttribute="trailing" constant="12" id="TC7-IS-70q"/>
+                        <constraint firstItem="u5W-fK-zfU" firstAttribute="leading" secondItem="FIq-Js-9Dp" secondAttribute="trailing" constant="2" id="UJi-QZ-sjX"/>
+                        <constraint firstAttribute="width" secondItem="cBU-ww-XuG" secondAttribute="height" multiplier="4:3" id="W29-0J-xWg"/>
+                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leading" constant="15" id="Z5x-OZ-eI6"/>
+                        <constraint firstItem="U2P-oM-t9I" firstAttribute="top" secondItem="FIq-Js-9Dp" secondAttribute="bottom" constant="8" symbolic="YES" id="cdV-Es-cJh"/>
+                        <constraint firstItem="byj-sI-dzA" firstAttribute="trailing" secondItem="VEN-JR-LfJ" secondAttribute="trailing" id="dLf-oW-XgA"/>
+                        <constraint firstItem="erp-lg-mES" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leading" constant="61" id="n9z-Sg-h9r"/>
+                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="baseline" secondItem="u5W-fK-zfU" secondAttribute="baseline" id="qgg-Ig-ZWv"/>
+                        <constraint firstItem="ddX-Hq-CyT" firstAttribute="top" secondItem="U2P-oM-t9I" secondAttribute="bottom" constant="8" symbolic="YES" id="qhL-L5-dgs"/>
+                        <constraint firstItem="u5W-fK-zfU" firstAttribute="centerX" secondItem="ddX-Hq-CyT" secondAttribute="centerX" id="tT4-YG-I2H"/>
+                        <constraint firstItem="VEN-JR-LfJ" firstAttribute="leading" secondItem="u5W-fK-zfU" secondAttribute="trailing" constant="9" id="tqW-1r-qGb"/>
+                        <constraint firstItem="ddX-Hq-CyT" firstAttribute="bottom" secondItem="cBU-ww-XuG" secondAttribute="bottomMargin" id="ukT-M2-su4"/>
+                        <constraint firstItem="erp-lg-mES" firstAttribute="bottom" secondItem="byj-sI-dzA" secondAttribute="bottom" id="ycc-tk-7aK"/>
                     </constraints>
                 </view>
             </subviews>
             <constraints>
-                <constraint firstItem="cBU-ww-XuG" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="U1u-eA-TRN"/>
+                <constraint firstItem="cBU-ww-XuG" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="if4-2h-NOi"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="categoryButton" destination="U2P-oM-t9I" id="lJs-QL-EB2"/>
                 <outlet property="containerView" destination="cBU-ww-XuG" id="PI6-sR-rwq"/>
                 <outlet property="detailsTextView" destination="ddX-Hq-CyT" id="a5e-PR-fpD"/>
                 <outlet property="ideaTitle" destination="erp-lg-mES" id="VUA-Ni-Cky"/>
@@ -111,7 +126,7 @@
                 <outlet property="wordText1" destination="FIq-Js-9Dp" id="2u6-ry-98k"/>
                 <outlet property="wordText2" destination="VEN-JR-LfJ" id="adu-Wm-gLg"/>
             </connections>
-            <point key="canvasLocation" x="-9.5999999999999996" y="118.74062968515743"/>
+            <point key="canvasLocation" x="-9.5999999999999996" y="29.685157421289357"/>
         </view>
     </objects>
 </document>
