--- a/IdeaSlotApp/UI/Storyboard/Idea/IdeaRegisterFormView.xib
+++ b/IdeaSlotApp/UI/Storyboard/Idea/IdeaRegisterFormView.xib
@@ -13,61 +13,61 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="IdeaRegisterForm" id="iN0-l3-epB" customClass="IdeaRegisterFormView" customModule="IdeaSlotApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="360"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cBU-ww-XuG">
-                    <rect key="frame" x="0.0" y="0.0" width="400" height="300"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cBU-ww-XuG">
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="360"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4DT-Pb-V35">
-                            <rect key="frame" x="8" y="8" width="56" height="24"/>
+                            <rect key="frame" x="8" y="17" width="56" height="24"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="56" id="Mgg-7M-SDm"/>
+                                <constraint firstAttribute="width" constant="56" id="sPS-Wf-LKm"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="erp-lg-mES">
-                            <rect key="frame" x="61" y="8" width="289" height="30"/>
+                            <rect key="frame" x="61" y="17" width="289" height="30"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="byj-sI-dzA">
-                            <rect key="frame" x="362" y="8" width="30" height="30"/>
+                            <rect key="frame" x="80" y="309" width="251" height="44"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="30" id="1IZ-9Q-fyN"/>
+                                <constraint firstAttribute="height" constant="44" id="vDl-KY-jcl"/>
                             </constraints>
                             <connections>
                                 <action selector="saveButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="wR2-IB-ubC"/>
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="word1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FIq-Js-9Dp">
-                            <rect key="frame" x="15" y="48" width="150" height="21"/>
+                            <rect key="frame" x="15" y="57" width="150" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="word2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VEN-JR-LfJ">
-                            <rect key="frame" x="242" y="48" width="150" height="21"/>
+                            <rect key="frame" x="242" y="57" width="150" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="operator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u5W-fK-zfU">
-                            <rect key="frame" x="167" y="48" width="66" height="21"/>
+                            <rect key="frame" x="167" y="57" width="66" height="21"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="66" id="Upv-2s-p2E"/>
+                                <constraint firstAttribute="width" constant="66" id="9pe-Aq-0Hv"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U2P-oM-t9I">
-                            <rect key="frame" x="8" y="77" width="100" height="30"/>
+                            <rect key="frame" x="8" y="86" width="100" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="100" id="cs1-dY-SJJ"/>
+                                <constraint firstAttribute="width" constant="100" id="VTJ-8H-qoY"/>
                             </constraints>
                             <state key="normal" title="Button"/>
                             <connections>
@@ -75,49 +75,63 @@
                             </connections>
                         </button>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ddX-Hq-CyT">
-                            <rect key="frame" x="8" y="115" width="384" height="177"/>
+                            <rect key="frame" x="8" y="124" width="384" height="177"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="177" id="5Mb-Am-WVC"/>
-                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LLE-Dd-sGt">
+                            <rect key="frame" x="372" y="8" width="20" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="20" id="Qxp-S2-gkm"/>
+                                <constraint firstAttribute="height" constant="20" id="wVP-H7-b6d"/>
+                            </constraints>
+                            <connections>
+                                <action selector="closeButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="5pk-MT-SqZ"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="4DT-Pb-V35" firstAttribute="top" secondItem="erp-lg-mES" secondAttribute="top" id="3W2-sk-wAn"/>
-                        <constraint firstItem="4DT-Pb-V35" firstAttribute="top" secondItem="cBU-ww-XuG" secondAttribute="topMargin" id="3zO-k5-hNg"/>
-                        <constraint firstItem="byj-sI-dzA" firstAttribute="trailing" secondItem="cBU-ww-XuG" secondAttribute="trailingMargin" id="6b4-1z-3Mc"/>
-                        <constraint firstItem="u5W-fK-zfU" firstAttribute="baseline" secondItem="VEN-JR-LfJ" secondAttribute="baseline" id="86L-yj-R9t"/>
-                        <constraint firstItem="U2P-oM-t9I" firstAttribute="leading" secondItem="ddX-Hq-CyT" secondAttribute="leading" id="AUD-cJ-7Jm"/>
-                        <constraint firstItem="4DT-Pb-V35" firstAttribute="leading" secondItem="U2P-oM-t9I" secondAttribute="leading" id="CDn-mT-myk"/>
-                        <constraint firstItem="4DT-Pb-V35" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leadingMargin" id="CyX-kB-zag"/>
-                        <constraint firstItem="erp-lg-mES" firstAttribute="top" secondItem="byj-sI-dzA" secondAttribute="top" id="Dxg-Du-gHI"/>
-                        <constraint firstItem="VEN-JR-LfJ" firstAttribute="trailing" secondItem="ddX-Hq-CyT" secondAttribute="trailing" id="KOS-pX-tPp"/>
-                        <constraint firstItem="byj-sI-dzA" firstAttribute="leading" secondItem="erp-lg-mES" secondAttribute="trailing" constant="12" id="TC7-IS-70q"/>
-                        <constraint firstItem="u5W-fK-zfU" firstAttribute="leading" secondItem="FIq-Js-9Dp" secondAttribute="trailing" constant="2" id="UJi-QZ-sjX"/>
-                        <constraint firstAttribute="width" secondItem="cBU-ww-XuG" secondAttribute="height" multiplier="4:3" id="W29-0J-xWg"/>
-                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leading" constant="15" id="Z5x-OZ-eI6"/>
-                        <constraint firstItem="U2P-oM-t9I" firstAttribute="top" secondItem="FIq-Js-9Dp" secondAttribute="bottom" constant="8" symbolic="YES" id="cdV-Es-cJh"/>
-                        <constraint firstItem="byj-sI-dzA" firstAttribute="trailing" secondItem="VEN-JR-LfJ" secondAttribute="trailing" id="dLf-oW-XgA"/>
-                        <constraint firstItem="erp-lg-mES" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leading" constant="61" id="n9z-Sg-h9r"/>
-                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="baseline" secondItem="u5W-fK-zfU" secondAttribute="baseline" id="qgg-Ig-ZWv"/>
-                        <constraint firstItem="ddX-Hq-CyT" firstAttribute="top" secondItem="U2P-oM-t9I" secondAttribute="bottom" constant="8" symbolic="YES" id="qhL-L5-dgs"/>
-                        <constraint firstItem="u5W-fK-zfU" firstAttribute="centerX" secondItem="ddX-Hq-CyT" secondAttribute="centerX" id="tT4-YG-I2H"/>
-                        <constraint firstItem="VEN-JR-LfJ" firstAttribute="leading" secondItem="u5W-fK-zfU" secondAttribute="trailing" constant="9" id="tqW-1r-qGb"/>
-                        <constraint firstItem="ddX-Hq-CyT" firstAttribute="bottom" secondItem="cBU-ww-XuG" secondAttribute="bottomMargin" id="ukT-M2-su4"/>
-                        <constraint firstItem="erp-lg-mES" firstAttribute="bottom" secondItem="byj-sI-dzA" secondAttribute="bottom" id="ycc-tk-7aK"/>
+                        <constraint firstItem="erp-lg-mES" firstAttribute="centerX" secondItem="byj-sI-dzA" secondAttribute="centerX" id="0F0-li-Esx"/>
+                        <constraint firstAttribute="trailing" secondItem="LLE-Dd-sGt" secondAttribute="trailing" constant="8" id="0pt-fW-TR3"/>
+                        <constraint firstItem="LLE-Dd-sGt" firstAttribute="leading" secondItem="erp-lg-mES" secondAttribute="trailing" constant="22" id="0zc-4u-GIZ"/>
+                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="baseline" secondItem="u5W-fK-zfU" secondAttribute="baseline" id="Bhh-5g-bky"/>
+                        <constraint firstItem="byj-sI-dzA" firstAttribute="top" secondItem="ddX-Hq-CyT" secondAttribute="bottom" constant="8" symbolic="YES" id="BlR-SY-xdc"/>
+                        <constraint firstItem="LLE-Dd-sGt" firstAttribute="top" secondItem="cBU-ww-XuG" secondAttribute="topMargin" id="DOq-hV-PiA"/>
+                        <constraint firstItem="u5W-fK-zfU" firstAttribute="centerX" secondItem="ddX-Hq-CyT" secondAttribute="centerX" id="OU5-cn-xvR"/>
+                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leading" constant="15" id="QNN-ga-GI8"/>
+                        <constraint firstAttribute="bottom" secondItem="byj-sI-dzA" secondAttribute="bottom" constant="7" id="S40-Ow-58y"/>
+                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="top" secondItem="4DT-Pb-V35" secondAttribute="bottom" constant="16" id="Si8-UO-NeH"/>
+                        <constraint firstItem="FIq-Js-9Dp" firstAttribute="top" secondItem="erp-lg-mES" secondAttribute="bottom" constant="10" id="TPe-LL-guD"/>
+                        <constraint firstItem="4DT-Pb-V35" firstAttribute="top" secondItem="erp-lg-mES" secondAttribute="top" id="a0n-je-PBf"/>
+                        <constraint firstItem="VEN-JR-LfJ" firstAttribute="trailing" secondItem="ddX-Hq-CyT" secondAttribute="trailing" id="dQ4-qb-u6Z"/>
+                        <constraint firstItem="VEN-JR-LfJ" firstAttribute="leading" secondItem="u5W-fK-zfU" secondAttribute="trailing" constant="9" id="eGS-G9-ixm"/>
+                        <constraint firstItem="u5W-fK-zfU" firstAttribute="baseline" secondItem="VEN-JR-LfJ" secondAttribute="baseline" id="frk-F3-0Qm"/>
+                        <constraint firstItem="U2P-oM-t9I" firstAttribute="top" secondItem="FIq-Js-9Dp" secondAttribute="bottom" constant="8" symbolic="YES" id="h6F-9t-ab9"/>
+                        <constraint firstItem="4DT-Pb-V35" firstAttribute="leading" secondItem="U2P-oM-t9I" secondAttribute="leading" id="iFc-xr-kvB"/>
+                        <constraint firstItem="4DT-Pb-V35" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leadingMargin" id="inA-OV-XeP"/>
+                        <constraint firstItem="byj-sI-dzA" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leading" constant="80" id="iyG-Ka-MAu"/>
+                        <constraint firstItem="VEN-JR-LfJ" firstAttribute="top" secondItem="LLE-Dd-sGt" secondAttribute="bottom" constant="29" id="kbR-jt-5sf"/>
+                        <constraint firstAttribute="width" secondItem="cBU-ww-XuG" secondAttribute="height" multiplier="10:9" id="mdc-wf-3bh"/>
+                        <constraint firstItem="erp-lg-mES" firstAttribute="leading" secondItem="cBU-ww-XuG" secondAttribute="leading" constant="61" id="ttK-ET-RIF"/>
+                        <constraint firstItem="U2P-oM-t9I" firstAttribute="leading" secondItem="ddX-Hq-CyT" secondAttribute="leading" id="v8h-Xd-1Ox"/>
+                        <constraint firstItem="u5W-fK-zfU" firstAttribute="leading" secondItem="FIq-Js-9Dp" secondAttribute="trailing" constant="2" id="vPG-5M-ufd"/>
+                        <constraint firstItem="VEN-JR-LfJ" firstAttribute="trailing" secondItem="cBU-ww-XuG" secondAttribute="trailingMargin" id="wBq-ru-FWE"/>
+                        <constraint firstItem="ddX-Hq-CyT" firstAttribute="top" secondItem="U2P-oM-t9I" secondAttribute="bottom" constant="8" symbolic="YES" id="zC1-VK-2Cn"/>
                     </constraints>
                 </view>
             </subviews>
             <constraints>
-                <constraint firstItem="cBU-ww-XuG" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="if4-2h-NOi"/>
+                <constraint firstItem="cBU-ww-XuG" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="20c-u0-K9V"/>
+                <constraint firstItem="cBU-ww-XuG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="8Gv-YT-dma"/>
+                <constraint firstItem="cBU-ww-XuG" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="yPm-fx-28v"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="categoryButton" destination="U2P-oM-t9I" id="lJs-QL-EB2"/>
+                <outlet property="closeButton" destination="LLE-Dd-sGt" id="2CF-ml-Rce"/>
                 <outlet property="containerView" destination="cBU-ww-XuG" id="PI6-sR-rwq"/>
                 <outlet property="detailsTextView" destination="ddX-Hq-CyT" id="a5e-PR-fpD"/>
                 <outlet property="ideaTitle" destination="erp-lg-mES" id="VUA-Ni-Cky"/>
@@ -126,7 +140,7 @@
                 <outlet property="wordText1" destination="FIq-Js-9Dp" id="2u6-ry-98k"/>
                 <outlet property="wordText2" destination="VEN-JR-LfJ" id="adu-Wm-gLg"/>
             </connections>
-            <point key="canvasLocation" x="-9.5999999999999996" y="29.685157421289357"/>
+            <point key="canvasLocation" x="-9.5999999999999996" y="54.422788605697157"/>
         </view>
     </objects>
 </document>
