--- a/IdeaSlotApp/UI/Storyboard/Base.lproj/Main.storyboard
+++ b/IdeaSlotApp/UI/Storyboard/Base.lproj/Main.storyboard
@@ -42,6 +42,7 @@
                     <navigationItem key="navigationItem" id="url-xp-bil"/>
                     <connections>
                         <outlet property="tableView" destination="FPP-67-Ope" id="Fd7-00-s47"/>
+                        <segue destination="WN8-F4-Cnb" kind="show" identifier="toIdeaDetailsFromWord" id="dOZ-dP-7ej"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -339,4 +340,7 @@
             <point key="canvasLocation" x="946" y="1052"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="dOZ-dP-7ej"/>
+    </inferredMetricsTieBreakers>
 </document>
